fix: adjust styles for card component and layout spacing

--- a/apps/nuxt/src/assets/scss/card.scss
+++ b/apps/nuxt/src/assets/scss/card.scss
@@ -46,6 +46,7 @@
       .fr-card__img {
         height: 100%;
         align-content: center;
+        max-height: 200px;
 
         img {
           object-fit: fill;
